Add 'Agrupando um DataFrame' section

--- a/workshop-python_pandas_gnmk.ipynb
+++ b/workshop-python_pandas_gnmk.ipynb
@@ -78,24 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "mjuH-w5McxpH"
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "não        42\n",
-       "aqui       13\n",
-       "é o         7\n",
-       "patrick   -99\n",
-       "dtype: int64"
-      ]
+      "text/plain": "não        42\naqui       13\né o         7\npatrick   -99\ndtype: int64"
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12465,11 +12455,185 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Agrupando um `DataFrame`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assim como no `SQL` o pandas nos permite computar agregações em nossos `DataFrame`s. Para atingir tal objetivo, usaremos a função [`groupby`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html). O mecanimos por trás dessa função foge do escopo desse curso, contudo é importante notar que a metodologia usada para atingir essa funcionalidade é conhecida como *split-apply-combine*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>chave1</th>\n      <th>chave2</th>\n      <th>data1</th>\n      <th>data2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>a</td>\n      <td>um</td>\n      <td>0.665078</td>\n      <td>-2.217535</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>a</td>\n      <td>dois</td>\n      <td>1.793492</td>\n      <td>0.260864</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>b</td>\n      <td>um</td>\n      <td>-1.029816</td>\n      <td>1.835246</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>b</td>\n      <td>dois</td>\n      <td>-0.105318</td>\n      <td>0.573794</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>a</td>\n      <td>um</td>\n      <td>-2.292867</td>\n      <td>1.089472</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "  chave1 chave2     data1     data2\n0      a     um  0.665078 -2.217535\n1      a   dois  1.793492  0.260864\n2      b     um -1.029816  1.835246\n3      b   dois -0.105318  0.573794\n4      a     um -2.292867  1.089472"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "agrupamento_df = pd.DataFrame({'chave1' : ['a', 'a', 'b', 'b', 'a'],\n",
+    "                   'chave2' : ['um', 'dois', 'um', 'dois', 'um'],\n",
+    "                   'data1' : np.random.randn(5),\n",
+    "                   'data2' : np.random.randn(5)})\n",
+    "agrupamento_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "pandas.core.groupby.generic.SeriesGroupBy"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agrupamento_chave1 = agrupamento_df['data1'].groupby(agrupamento_df['chave1'])\n",
+    "type(agrupamento_chave1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apesar do resultado da operação `groupby` não ser de fato um `DataFrame` podemos computar funções de agregação no resultado da mesma forma. Dentro do pandas as operações mais comuns em agrupamentos (máximo, mínimo, media etc.) foram desenvolvidas de forma otimizada e podem ser aplicadas diretamente ao nosso objeto `pandas.core.groupby.generic.SeriesGroupBy`.\n",
+    "\n",
+    "| **Nome da Função**                                                                                                                                               | **Descrição**                            |\n",
+    "|------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------|\n",
+    "| [`count`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.DataFrameGroupBy.count.html?pandas.core.groupby.DataFrameGroupBy.count) |  Número de valores no agrupamento        |\n",
+    "| [`sum`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.sum.html?pandas.core.groupby.GroupBy.sum)                         | Soma dos valores no agrupamento          |\n",
+    "| [`mean`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.mean.html?pandas.core.groupby.GroupBy.mean)                      | Media dos valores no agrupamento         |\n",
+    "| [`median`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.median.html?pandas.core.groupby.GroupBy.median)                | Mediana dos valores no agrupamento       |\n",
+    "| [`std`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.std.html?pandas.core.groupby.GroupBy.std)                         | Desvio padrão dos valores no agrupamento |\n",
+    "| [`var`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.var.html?pandas.core.groupby.GroupBy.var)                         | Variância dos valores no agrupamento     |\n",
+    "| [`min`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.min.html?pandas.core.groupby.GroupBy.min)                         | Menores valores no agrupamento           |\n",
+    "| [`max`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.max.html?pandas.core.groupby.GroupBy.max)                         | Maiores valores no agrupamento           |\n",
+    "| [`prod`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.prod.html?pandas.core.groupby.GroupBy.prod)                      | Produto dos valores no agrupamento       |\n",
+    "| [`first`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.first.html?pandas.core.groupby.GroupBy.first)                   | Primeiros valores no agrupamento         |\n",
+    "| [`last`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.last.html?pandas.core.groupby.GroupBy.last)                      | Últimos valores no agrupamento           |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>count</th>\n      <th>mean</th>\n      <th>std</th>\n      <th>min</th>\n      <th>25%</th>\n      <th>50%</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n    <tr>\n      <th>chave1</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>a</th>\n      <td>3.0</td>\n      <td>0.055234</td>\n      <td>2.110335</td>\n      <td>-2.292867</td>\n      <td>-0.813895</td>\n      <td>0.665078</td>\n      <td>1.229285</td>\n      <td>1.793492</td>\n    </tr>\n    <tr>\n      <th>b</th>\n      <td>2.0</td>\n      <td>-0.567567</td>\n      <td>0.653718</td>\n      <td>-1.029816</td>\n      <td>-0.798691</td>\n      <td>-0.567567</td>\n      <td>-0.336443</td>\n      <td>-0.105318</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "        count      mean       std       min       25%       50%       75%  \\\nchave1                                                                      \na         3.0  0.055234  2.110335 -2.292867 -0.813895  0.665078  1.229285   \nb         2.0 -0.567567  0.653718 -1.029816 -0.798691 -0.567567 -0.336443   \n\n             max  \nchave1            \na       1.793492  \nb      -0.105318  "
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "descricoes_chave1 = agrupamento_chave1.describe()\n",
+    "descricoes_chave1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos desenvolver nossas próprias funções de agregação e usá-las no nosso agrupamento com o auxílio da função [`agg`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.GroupBy.agg.html?pandas.core.groupby.GroupBy.agg)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "chave1\na    4.086360\nb    0.924497\nName: data1, dtype: float64"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pico_a_pico(arr):\n",
+    "    return arr.max() - arr.min()\n",
+    "\n",
+    "\n",
+    "agrupamento_chave1.agg(pico_a_pico)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Em vários casos é necessário computador diferentes funções para o mesmo agrupamento e analisar em conjunto os resultados. Nesse cenário, podemos passar uma lista de funções como parâmetro para a função `agg`. Nesse caso, nos é retornado um `DataFrame` com o resultado das computações no agrupamento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sum</th>\n      <th>count</th>\n      <th>mean</th>\n      <th>pico_a_pico</th>\n    </tr>\n    <tr>\n      <th>chave1</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>a</th>\n      <td>0.165703</td>\n      <td>3</td>\n      <td>0.055234</td>\n      <td>4.086360</td>\n    </tr>\n    <tr>\n      <th>b</th>\n      <td>-1.135134</td>\n      <td>2</td>\n      <td>-0.567567</td>\n      <td>0.924497</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "             sum  count      mean  pico_a_pico\nchave1                                        \na       0.165703      3  0.055234     4.086360\nb      -1.135134      2 -0.567567     0.924497"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado_agrupamentos_df = agrupamento_chave1.agg([\"sum\", \"count\", \"mean\", pico_a_pico])\n",
+    "type(resultado_agrupamentos_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Não precisamos usar como nome das colunas o que é retornado para nós usando a sintaxe acima. Caso seja necessário dar nomes específicos as colunas resultantes das operações no agrupamento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>soma</th>\n      <th>contagem</th>\n      <th>media</th>\n      <th>pico a pico</th>\n    </tr>\n    <tr>\n      <th>chave1</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>a</th>\n      <td>0.165703</td>\n      <td>3</td>\n      <td>0.055234</td>\n      <td>4.086360</td>\n    </tr>\n    <tr>\n      <th>b</th>\n      <td>-1.135134</td>\n      <td>2</td>\n      <td>-0.567567</td>\n      <td>0.924497</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "            soma  contagem     media  pico a pico\nchave1                                           \na       0.165703         3  0.055234     4.086360\nb      -1.135134         2 -0.567567     0.924497"
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado_agrupamentos_df = agrupamento_chave1.agg([(\"soma\", \"sum\"), (\"contagem\", \"count\"), (\"media\", \"mean\"), (\"pico a pico\", pico_a_pico)])\n",
+    "resultado_agrupamentos_df"
+   ]
   }
  ],
  "metadata": {
@@ -12494,7 +12658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9-final"
   }
  },
  "nbformat": 4,
